--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor-mlkit/barcode-scanning": "^5.4.0",
     "@capacitor/android": "5.7.4",
     "@capacitor/app": "5.0.7",
+    "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "^5.7.4",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
