--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@capacitor/app": "5.0.7",
     "@capacitor/camera": "^5.0.9",
     "@capacitor/core": "^5.7.4",
+    "@capacitor/filesystem": "^6.0.0",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.5.0",
+    "@ionic/pwa-elements": "^3.2.2",
     "@maskito/angular": "^2.2.0",
     "@maskito/core": "^2.2.0",
+    "date-fns": "^3.6.0",
     "ionic-input-mask": "^1.0.1",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
