--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
+    "@capacitor/toast": "^6.0.0",
     "@ionic/angular": "^7.5.0",
     "@ionic/pwa-elements": "^3.2.2",
     "@maskito/angular": "^2.2.0",
